put nums2 right of nums1

--- a/Algorithms/Sorting/MergeSortedArrays/diagrams/diagram0.tex
+++ b/Algorithms/Sorting/MergeSortedArrays/diagrams/diagram0.tex
@@ -24,7 +24,7 @@
       \draw[<-] ([yshift=-2mm]vector-2-3.south) -- ++(0,-0.5) node[below] {$i$};
 
       % Current state of nums2 array
-      \matrix(vector2)[matrix of nodes, right=7mm of vector,
+      \matrix(vector2)[matrix of nodes, below=14mm of vector,
           row 1/.style={nodes={draw=none, minimum width=0.3cm}},
           nodes={draw}]
       {
@@ -37,23 +37,6 @@
 
       % Draw j arrow under nums2
       \draw[<-] ([yshift=-2mm]vector2-2-3.south) -- ++(0,-0.5) node[below] {$j$};
-
-      % Show comparison result
-      \node(comparison)[below=12mm of vector, xshift=12mm] {$3 \ngtr 6 \therefore nums1[k] = 6 $};
-
-      % Updated state of nums1 array
-      \matrix(vector3)[matrix of nodes, below=2mm of comparison,
-          row 1/.style={nodes={draw=none, minimum width=0.3cm}},
-          nodes={draw}]
-      {
-          \tiny{0} & \tiny{1} & \tiny{2} & \tiny{3} & \tiny{4} & \tiny{5} \\
-          ${1}$ & ${2}$ & ${3}$ & ${0}$ & ${0}$ & ${6}$\\
-      };
-
-      % Label updated nums1 array
-      \node[above=-3mm of vector3] {nums1};
-
-
 
 \end{tikzpicture}
 \end{document}
