--- a/Algorithms/Sorting/MergeSortedArrays/diagrams/diagram4.tex
+++ b/Algorithms/Sorting/MergeSortedArrays/diagrams/diagram4.tex
@@ -25,7 +25,7 @@
       \draw[<-] ([yshift=-2mm]vector-2-2.south) -- ++(0,-0.5) node[below] {$i$};
 
       % Current state of nums2 array
-      \matrix(vector2)[matrix of nodes, below=14mm of vector,
+      \matrix(vector2)[matrix of nodes, right=7mm of vector,
           row 1/.style={nodes={draw=none, minimum width=0.3cm}},
           nodes={draw}]
       {
@@ -40,7 +40,7 @@
       \draw[<-] ([yshift=-2mm]vector2-2-1.south) -- ++(0,-0.5) node[below] {$j$};
 
       % Show comparison result
-      \node(comparison)[below=12mm of vector2] {$2\ngtr2 \therefore k = 2$ };
+      \node(comparison)[below=12mm of vector, xshift=12mm] {$2==2 \therefore nums1[k] = 2$ };
 
       % Updated state of nums1 array
       \matrix(vector3)[matrix of nodes, below=2mm of comparison,
