--- a/Algorithms/Sorting/MergeSortedArrays/diagrams/diagram5.tex
+++ b/Algorithms/Sorting/MergeSortedArrays/diagrams/diagram5.tex
@@ -2,6 +2,7 @@
 \usetikzlibrary{positioning,matrix,arrows.meta}
 \usepackage{amssymb}
 
+
 \begin{document}
 \begin{tikzpicture}[nodes in empty cells,
       nodes={minimum width=0.5cm, minimum height=0.5cm},
@@ -13,15 +14,15 @@
           nodes={draw}]
       {
           \tiny{0} & \tiny{1} & \tiny{2} & \tiny{3} & \tiny{4} & \tiny{5} \\
-          ${1}$ & ${2}$ & ${3}$ & ${0}$ & ${0}$ & ${0}$\\
+          ${1}$ & ${2}$ & ${2}$ & ${3}$ & ${5}$ & ${6}$\\
       };
 
       % Label nums1 array
       \node[above=-3mm of vector] {nums1};
 
       % Draw i and k arrows under nums1
-      \draw[<-] ([yshift=-2mm]vector-2-6.south) -- ++(0,-0.5) node[below] {$k$};
-      \draw[<-] ([yshift=-2mm]vector-2-3.south) -- ++(0,-0.5) node[below] {$i$};
+      \draw[<-] ([yshift=-2mm, xshift=1mm]vector-2-2.south) -- ++(0,-0.5) node[below] {$k$};
+      \draw[<-] ([yshift=-2mm, xshift=-1mm]vector-2-2.south) -- ++(0,-0.5) node[below] {$i$};
 
       % Current state of nums2 array
       \matrix(vector2)[matrix of nodes, right=7mm of vector,
@@ -36,10 +37,10 @@
       \node[above=-3mm of vector2] {nums2};
 
       % Draw j arrow under nums2
-      \draw[<-] ([yshift=-2mm]vector2-2-3.south) -- ++(0,-0.5) node[below] {$j$};
+      \draw[<-] ([yshift=-2mm, xshift=-6mm]vector2-2-1.south) -- ++(0,-0.5) node[below] {$j$};
 
       % Show comparison result
-      \node(comparison)[below=12mm of vector, xshift=12mm] {$3 \ngtr 6 \therefore nums1[k] = 6 $};
+      \node(comparison)[below=12mm of vector, xshift=12mm] {$nums1[k] = 2$ };
 
       % Updated state of nums1 array
       \matrix(vector3)[matrix of nodes, below=2mm of comparison,
@@ -47,7 +48,7 @@
           nodes={draw}]
       {
           \tiny{0} & \tiny{1} & \tiny{2} & \tiny{3} & \tiny{4} & \tiny{5} \\
-          ${1}$ & ${2}$ & ${3}$ & ${0}$ & ${0}$ & ${6}$\\
+          ${1}$ & ${2}$ & ${2}$ & ${3}$ & ${5}$ & ${6}$\\
       };
 
       % Label updated nums1 array
