--- a/Algorithms/Sorting/MergeSortedArrays/diagrams/diagram2.tex
+++ b/Algorithms/Sorting/MergeSortedArrays/diagrams/diagram2.tex
@@ -24,7 +24,7 @@
       \draw[<-] ([yshift=-2mm]vector-2-3.south) -- ++(0,-0.5) node[below] {$i$};
 
       % Current state of nums2 array
-      \matrix(vector2)[matrix of nodes, below=14mm of vector,
+      \matrix(vector2)[matrix of nodes, right=7mm of vector,
           row 1/.style={nodes={draw=none, minimum width=0.3cm}},
           nodes={draw}]
       {
@@ -39,7 +39,7 @@
       \draw[<-] ([yshift=-2mm]vector2-2-2.south) -- ++(0,-0.5) node[below] {$j$};
 
       % Show comparison result
-      \node(comparison)[below=12mm of vector2] {$3 \ngtr 5 \therefore k = 5 $};
+      \node(comparison)[below=12mm of vector, xshift=12mm] {$3 \ngtr 5 \therefore nums1[k] = 5 $};
 
       % Updated state of nums1 array
       \matrix(vector3)[matrix of nodes, below=2mm of comparison,
